--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,13 +6,90 @@
     "monaco-editor": "^0.13.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "eslint-plugin-vue": "^4.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env LOCAL_SERVER=1 node scripts/start.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-loader": "7.1.1",
+    "babel-macros": "^1.0.2",
+    "babel-plugin-codegen": "^1.2.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-styled-components": "1.5.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "buffer-loader": "^0.0.1",
+    "case-sensitive-paths-webpack-plugin": "^2.0.0",
+    "chalk": "1.1.3",
+    "connect-history-api-fallback": "1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cors": "^2.8.4",
+    "cross-env": "^5.0.5",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.28.1",
+    "detect-port": "^1.1.1",
+    "eslint": "^5.1.0",
+    "eslint-plugin-vue": "^4.5.0",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "filesize": "^3.5.6",
+    "flow-bin": "^0.57.3",
+    "fs-extra": "^2.1.2",
+    "gulp-replace": "^0.5.4",
+    "gzip-size": "3.0.0",
+    "happypack": "^4.0.0-beta.2",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.24.1",
+    "http-proxy-middleware": "^0.17.3",
+    "husky": "^0.14.3",
+    "jest": "^21.2.1",
+    "jest-image-snapshot": "^1.0.1",
+    "jest-junit": "^3.4.1",
+    "jest-styled-components": "4.11.0-1",
+    "json-loader": "0.5.4",
+    "object-assign": "^4.1.1",
+    "opn": "4.0.2",
+    "path-exists": "3.0.0",
+    "path-override-webpack-plugin": "^0.1.2",
+    "postcss-loader": "^1.2.1",
+    "preval.macro": "^1.0.1",
+    "promise": "7.1.1",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^4.0.0-beta.13",
+    "react-loadable": "^5.4.0",
+    "react-test-renderer": "16",
+    "recursive-readdir": "^2.2.1",
+    "rimraf": "^2.6.1",
+    "run-sequence": "^1.2.2",
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "strip-ansi": "3.0.1",
+    "style-loader": "^0.18.2",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "typescript": "^2.4.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.4",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.0",
+    "whatwg-fetch": "^2.0.3",
+    "worker-loader": "1.1.0"
   }
 }
