--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 node_modules
+# we use yarn
+package-lock.json
+
+/integration-tests/**/__diff_output__
 
 # testing
-/coverage
+coverage
 
 # production
-/build
+build
+www
+.deliver
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+npm-debug.log
+yarn-error.log
+.vscode
+.idea
+jest
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+lerna-debug.log
